--- a/latex/titlepage.tex
+++ b/latex/titlepage.tex
@@ -21,7 +21,7 @@
 	-- (\xone mm, \yone mm);
 \end{tikzpicture}
 	\begin{textblock}{10}[0,0](4,2.5)
-		\includegraphics[width=.3\textwidth]{logos/KITLogo_RGB.pdf}
+		\includegraphics[width=.3\textwidth]{logos/KITLogo_german.pdf}
 	\end{textblock}
 	\changefont{phv}{m}{n}	% helvetica	
 	\vspace*{3.5cm}
