More content for presentation, used theme focus

--- a/latex/presentation/bibliography.bib
+++ b/latex/presentation/bibliography.bib
@@ -21,3 +21,20 @@
  url = {https://de.aliexpress.com/item/4000127246703.html},
  urldate = {2020-06-25}
 }
+
+@online{background,
+ title = {HDRI Haven},
+ subtitle = {{$360^\circ$}-Bild einer kleinen Höhle},
+ url = {https://hdrihaven.com/hdri/?c=nature&h=small_cave},
+ urldate = {2020-05-20}
+}
+
+@book{Zoologie24Wehner,
+ title = {Zoologie},
+ author = {Wehner, Rüdiger and Gehring, Walter},
+ edition = {24},
+ year = {2007},
+ isbn = {978-3-13-367424-9},
+ publisher = {Georg Thieme Verlag},
+ address = {Stuttgart}
+}
