More small changes in presentation

--- a/latex/presentation/presentation.tex
+++ b/latex/presentation/presentation.tex
@@ -124,7 +124,7 @@
  \begin{figure}
   \centering
   \includegraphics[height=0.6\textheight]{../../PCA/mean_log_weight_downscaled_wings_legs_and_weight(onlyBox,stroke4).jpg}
-  \caption{Visualisierung des Mittelwerts der Eingabedaten. Werte, die nicht grafisch visualisiert sind, sind folgende:\\\emph{Flügel} $0{,}159$, \emph{Beine mit Bodenkontakt}~$1{,}39$, \emph{Gewicht} $93$kg}
+  \caption{Visualisierung des Mittelwerts der Eingabedaten. Werte, die nicht grafisch visualisiert sind, sind folgende:\\\emph{Flügelpaare} $0{,}159$, \emph{Beinepaare mit Bodenkontakt}~$1{,}39$, \emph{Gewicht} $93$kg}
  \end{figure}
 \end{frame}
 
@@ -192,6 +192,7 @@
    \item Flossen und Arme: ausgerichtet an globalen Achsen
    \item Beine: eigener iterativer Algorithmus
   \end{itemize}
+  \item bei Weiterverarbeitung, \zb Animation,\\ wird Positionierung nocheinmal angepasst
  \end{itemize}
 \end{frame}
 
